--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
   }
 
   .top-heading h1 {
-    line-height: 25px;
+    line-height: 32px;
     font-family: bold-Lato, sans-serif;
     background-image: linear-gradient(to right, #ec5242, #ec5242, #272a31, #ec5242, #ec5242, #ec5242);
     /* stylelint-disable */
@@ -35,9 +35,10 @@
     background-clip: text;
     /* stylelint-enable */
     color: transparent;
-    letter-spacing: 5px;
+    letter-spacing: 0px;
     font-weight: 900;
-    font-size: 1.2em;
+    width: 100%;
+    font-size: 2em;
   }
 
   .main-box {
@@ -105,7 +106,7 @@
     background-clip: text;
     /* stylelint-enable */
     color: transparent;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
     font-weight: 900;
     font-size: 65px;
     margin-top: -10px;
